Fix Gap Problem

--- a/assets/css/cmps/AppHeader.css
+++ b/assets/css/cmps/AppHeader.css
@@ -2,13 +2,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 1em;
     padding: 0.5em 1em;
     background-color: #fff;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-
-    >.material-symbols-outlined {
-        margin-right: 1em;
-    }
 
     >.logo img {
         height: 40px;
